<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_groups"
        android:icon="@drawable/ic_groups_icon"
        android:title="@string/title_groups" />
    <item
        android:id="@+id/navigation_devices"
        android:icon="@drawable/ic_std_device"
        android:title="@string/title_devices" />
    <item
        android:id="@+id/navigation_schedule"
        android:icon="@drawable/ic_clock_icon"
        android:title="@string/title_schedule" />
    <item
        android:id="@+id/navigation_notifications"
        android:title="@string/title_notifications" />

</menu>