<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.navigationandmvvm.ViewsAndViewModels.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_devices"
        android:name="com.example.navigationandmvvm.ViewsAndViewModels.devices.MatterDeviceFragment"
        android:label="@string/title_devices"
        tools:layout="@layout/fragment_matter_device" />
    <fragment
        android:id="@+id/navigation_groups"
        android:name="com.example.navigationandmvvm.ViewsAndViewModels.groups.GroupsFragment"
        android:label="@string/title_groups"
        tools:layout="@layout/fragment_groups" />
    <fragment
        android:id="@+id/navigation_schedule"
        android:name="com.example.navigationandmvvm.ViewsAndViewModels.schedule.ScheduleFragment"
        android:label="@string/title_schedule"
        tools:layout="@layout/fragment_schedule" />
    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.navigationandmvvm.ViewsAndViewModels.notifications.NotificationsFragment"
        android:label="fragment_notifications"
        tools:layout="@layout/fragment_notifications" />

</navigation>